refactor: rename and restructure to avoid confusion with nimbus classes, add more tests