@@ -1,12 +1,12 @@
 package no.nav.security.token.support.core.validation;
 
+import com.nimbusds.jose.jwk.source.RemoteJWKSet;
 import com.nimbusds.jwt.JWT;
-import no.nav.security.token.support.core.configuration.IssuerProperties;
 import no.nav.security.token.support.core.exceptions.JwtTokenValidatorException;
 import org.junit.jupiter.api.Test;
 
 import java.net.MalformedURLException;
-import java.net.URL;
+import java.net.URI;
 import java.util.Collections;
 import java.util.List;
 
@@ -36,13 +36,7 @@ public class ConfigurableJwtTokenValidatorTest extends AbstractJwtValidatorTest 
             return new ConfigurableJwtTokenValidator(
                 issuer,
                 optionalClaims,
-                new RemoteJWKSetCache(
-                    new IssuerProperties(
-                        new URL("https://someurl")
-                    ),
-                    new MockResourceRetriever(),
-                    new URL("https://someurl")
-                ).configure()
+                new RemoteJWKSet<>(URI.create("https://someurl").toURL(), new MockResourceRetriever())
             );
         } catch (MalformedURLException e) {
             throw new RuntimeException(e);
